<resources>
    <string name="app_name">Manillas APP</string>
    <string name="titulo">Venta de Manillas</string>
    <string name="label_cantidad">Digite la cantidad de manillas</string>
    <string name="label_material">Material</string>
    <string name="label_dije">Dije</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_moneda">Moneda</string>
    <string name="label_limpiar">Limpiar</string>
    <string name="label_calcular">Calcular</string>
    <string name="cuero">Cuero</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="dolar">Dolar</string>
    <string name="peso_colombiano">Pesos Colombianos</string>
    <string name="seleccione">-- Seleccione una opción --</string>
    <string name="error_required">Digite la cantidad de manillas</string>
    <string name="material_required">Seleccione un material</string>
    <string name="dije_required">Seleccione un dije</string>
    <string name="tipo_required">Seleccione un tipo</string>
    <string name="moneda_required">Seleccione una moneda</string>
    <string name="error_0">La cantidad de manillas no puede ser cero</string>
    <string name="label_cantidad_table">Cantidad</string>
    <string name="label_valor_table">Valor</string>
    <string name="label_total_table">Total</string>
    <string name="valor_dolar">3200</string>
    <string name="min_value_cantidad">0</string>
    <string name="max_value_cantidad">100</string>
    <string-array name="materiales">
        <item>@string/seleccione</item>
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dijes">
        <item>@string/seleccione</item>
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipos">
        <item>@string/seleccione</item>
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="monedas">
        <item>@string/seleccione</item>
        <item>@string/dolar</item>
        <item>@string/peso_colombiano</item>
    </string-array>
    <string name="cuerda">Cuerda</string>
</resources>
